# NM_Lab2

./: README.md  pyproject.toml  task1.cpp
nm_lab2/: GUI_app.py  new_progon.py  resolve.py  threediag_matrix_alg.py
tests/: test_nm_lab2.py
