[tool.poetry]
name = "NM_Lab2"
version = "0.1.0"
description = ""
authors = ["NikitaSyatov <syatov430@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
PySimpleGUI = "^4.60.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
